--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@emotion/styled": "^11.10.6",
     "@mui/material": "^5.11.12",
     "bootstrap": "^5.2.3",
-    "emailjs": "^4.0.1",
+    "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.8.0",
     "react-scroll": "^1.8.9",
+    "sweetalert": "^2.1.2",
     "swiper": "^9.0.2"
   },
   "devDependencies": {
